updated server to export character data
updated the data file to export the character data

changed the router to have right name for character data rather than gift data

changed the vite.config to expose the right api end point

some slight modifcations to the character files in the client so they can load properly

--- a/client/public/character.html
+++ b/client/public/character.html
@@ -19,11 +19,16 @@
         </div>
         <div className="character-details">
             <h2 id="name"></h2>
+            <h1 id="alias"></h1>
+            <h3 id="role"></h3>
+            <p id="affiliations"></p>
+            <p id="description"></p>
+
+
             <p id="submittedBy"></p>
             <p id="submittedOn"></p>
             <p id="pricePoint"></p>
             <p id="audience"></p>
-            <p id="description"></p>
         </div>
     </main>
 </body>
