--- a/server/public/character.html
+++ b/server/public/character.html
@@ -19,11 +19,16 @@
         </div>
         <div className="character-details">
             <h2 id="name"></h2>
+            <h1 id="alias"></h1>
+            <h3 id="role"></h3>
+            <p id="affiliations"></p>
+            <p id="description"></p>
+
+
             <p id="submittedBy"></p>
             <p id="submittedOn"></p>
             <p id="pricePoint"></p>
             <p id="audience"></p>
-            <p id="description"></p>
         </div>
     </main>
 </body>
