--- a/client/public/character.html
+++ b/client/public/character.html
@@ -23,6 +23,7 @@
             <h3 id="role"></h3>
             <p id="affiliations"></p>
             <p id="description"></p>
+            <a id="infoUrl" href="" target="_blank">More Info</a>
 
 
             <p id="submittedBy"></p>
