--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Marvel Rivals Heroes</title>
-    <link rel="icon" type="image/x-icon" href="https://www.marvelrivals.com/pc/gw/20241128194803/img/logo_ad22b142.png" />
+    <link rel="icon" type="image/x-icon" href="/logo.png" />
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="/scripts/header.js"></script>
