--- a/client/public/404.html
+++ b/client/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <head>
-    <title>UnEarthed</title>
-    <link rel="icon" type="image/x-icon" href="/public/logo.png">
+    <title>Marvel Rivals Characters</title>
+    <link rel="icon" type="image/x-icon" href="logo.png">
     <link rel="stylesheet" href="../style.css">
   </head>
 
