--- a/server/public/character.html
+++ b/server/public/character.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/x-icon" href="/logo.png">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Gift</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css" />
